# eks-node-migrator

./: .dockerignore  .gitignore  .gitlab-ci.yml  .releaserc.yaml  Dockerfile  LICENSE  Makefile  README.md  eks_node_migrator.py  setup.cfg
eksmigrator/: __init__.py  __main__.py  cli.py  cli_old.py  config.py
eksmigrator/lib/: aws.py  exceptions.py  k8s.py  k8s_old.py
