[bdist_wheel]
universal = 1

[metadata]
name = eks-node-migrator
version = attr:eksmigrator.__version__
license = Apache License, Version 2.0
license_file = LICENSE
description = EKS Node Migrator is a utility for to gracefully drain self-managed EKS node groups. Primarly used for draining workload from on-demand/reserverd instances so it can be scheduled over SPOT instance backed nodegroups.
long_description = file: README.md
long_description_content_type = text/markdown
author = Anfal Haider
author_email = anfal.haider@careem.com
maintainer = Anfal Haider
maintainer_email = anfal.haider@careem.com
url = https://github.com/ahrizvi/eks-node-migrator
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires =
    boto3 >= 1.9.246
    kubernetes >= 10.0.1
    python-dotenv >= 0.10.2
python_requires = >=3.7

[options.packages.find]
exclude=tests

[options.entry_points]
console_scripts =
    eks_node_migrator.py = eksmigrator.cli:main
